# protected_areas_etl

./: .gitignore  Dockerfile  Dockerfile.ingestor  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements-ingestor.txt
config/: airflow.cfg
dags/: dag.py
data/: rvi_timeseries.csv  vh_timeseries.csv  vv_timeseries.csv  vv_vh_ratio_timeseries.csv
db/: create_db.sql  ingest_protected_area_data.py
notebooks/: database_injestion.ipynb  get_sar_data.ipynb
src/: get_stac.py  ingest_data.py  process_stac.py  utils.py
