[project]
name = "protected-areas-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "bokeh>=3.8.1",
    "dask>=2025.11.0",
    "distributed>=2025.11.0",
    "duckdb>=1.4.3",
    "folium>=0.20.0",
    "geemap>=0.36.6",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "odc-stac>=0.4.0",
    "pandas>=2.3.3",
    "planetary-computer>=1.0.0",
    "psycopg2>=2.9.11",
    "pystac-client>=0.9.0",
    "python-dotenv>=1.2.1",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "stackstac>=0.5.1",
    "xarray>=2025.10.1",
    "zarr>=3.1.5",
]
